package app;

public class CapBlack extends Cap{
    @Override
    public String name() {
        return "Black Cap";
    }

    @Override
    public float price() {
        return 15.99f;
    }
}


