package app;

public class CapManufacturer implements Manufacturer {
    @Override
    public String getManufacturerName() {
        return "Smart caps";
    }
}
