package app;

public class CapWhite extends Cap{
    @Override
    public String name() {
        return "White Cap";
    }

    @Override
    public float price() {
        return 16.99f;
    }
}


