package app;

public interface Item {
    String name();
    float price();
    Manufacturer getManufacturer();
}
