package app;

public interface Manufacturer {
    String getManufacturerName();
}

