package app;

public class TshirtBlue extends Tshirt{
    @Override
    public String name() {
        return "Blue T-shirt";
    }

    @Override
    public float price() {
        return 28.99f;
    }
}


