package app;

public class TshirtManufacturer implements Manufacturer{
    @Override
    public String getManufacturerName() {
        return "Active sports";
    }
}

