package app;

public class TshirtRed extends Tshirt {
    @Override
    public String name() {
        return "Red T-shirt";
    }

    @Override
    public float price() {
        return 29.99f;
    }
}

